io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalcalltononwhitelistedmethod1/C.java
package io.hotmoka.examples.errors.illegalcalltononwhitelistedmethod1;

public class C {

	public long foo() {
		return System.currentTimeMillis(); // KO
	}
}